discussion/kv_engine/178970/178970_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move bufferevent related code to subclass

This is a preparation for creating Folly backends

Change-Id: Iec74f093278a59d5b65cc182d527290ff8cf101d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-18 12:14:10.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-18 12:44:51.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19577/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/mcbp/mock_connection.h:57:35: error: only virtual member functions can be marked "override" [clang-diagnostic-error]
    void executeCommandPipeline() override {
                                  ^~~~~~~~~

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19577/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/mcbp/mock_connection.h:57:35:
error: only virtual member functions can be marked "override" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19577/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48487/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\daemon\connection_libevent.h(17): error C2011: "LibeventConnection": "class" type redefinition ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48487/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9270/ : FAILURE

Compile error at [2022-08-18T12:15:28.108Z] ../kv_engine/protocol/mcbp/mcbp_fuzz_test.cc:97:20:
error: field type "FuzzConnection" is an abstract class
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9270/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20782/ : FAILURE

Compile error at [2022-08-18T12:44:12.966Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of "LibeventConnection"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20782/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21517/ : FAILURE

Compile error at [2022-08-18T12:20:05.545Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of ?class LibeventConnection?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21517/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21871/ : FAILURE

Compile error at [2022-08-18T12:18:47.888Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of ?class LibeventConnection?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21871/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22594/ : FAILURE

Compile error at [2022-08-18T12:19:25.008Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of "LibeventConnection"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22594/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9369/ : FAILURE

Compile error at [2022-08-18T12:23:17.041Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of ?class LibeventConnection?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9369/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29899/ : FAILURE

Compile error at [2022-08-18T12:17:05.642Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/connection_libevent.h:17:7:
error: redefinition of "LibeventConnection"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29899/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18789/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40745/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
